--- a/src/GUI/MainReclamation.fxml
+++ b/src/GUI/MainReclamation.fxml
@@ -121,6 +121,11 @@
                               <Font name="Cambria" size="24.0" />
                            </font>
                         </Label>
+                        <Button fx:id="ret" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ret" prefHeight="25.0" prefWidth="85.0" text="retour">
+                           <HBox.margin>
+                              <Insets left="600.0" />
+                           </HBox.margin>
+                        </Button>
                      </children>
                      <padding>
                         <Insets left="10.0" />
